# gazebo_ros_2Dmap_plugin

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: common.h  gazebo_2Dmap_plugin.h  gazebo_octomap_plugin.h  gridlinetraversal.h
src/: gazebo_2Dmap_plugin.cpp  gazebo_octomap_plugin.cpp  map_saver.cpp
srv/: GenerateMap.srv  SaveMap.srv
